# acog-dev-psq-basic

./: .gitignore  README.md  db.sqlite3  main.py  manage.py  pyproject.toml  requirements.txt  sqlite3
acog_dev_psq_basic/: apps.py  tasks.py  urls.py  views.py
psq_dev/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
sqlite_/: __init__.py
